Solved issue with horizontal scroll #578921108149225

--- a/public/sources/less/ui/settings/styles.less
+++ b/public/sources/less/ui/settings/styles.less
@@ -110,6 +110,10 @@
   }
 }
 
+.vcv-ui-template-group-wrapper {
+  overflow: hidden;
+}
+
 .vcv-ui-template-options-wrapper {
   margin-right: -32px;
   margin-bottom: -25px;
